Closing new tabs interferes with order of newly created tabs.
I just noticed this odd issue with tabs. I really don't know how to title the issue properly, so feel free to change the title. Here is what I did:
- Have a page with some links and few other unrelated tabs to the right from it.
- Then open some of those links in new tabs (I used middle-click, but I can also reproduce it using the context menu). Tabs are opening as they should right next to each other.
- Close some of the new tabs.
- Open more links from the original page - they will not open after the last link opened from that page, but instead after the last + how many tabs you closed (effectivelly mixing with other tabs).
Here is an example scenario:
Say you open 3 links from a page as new tabs. Then you close one of them (so you have the original page + 2 more tabs with links opened from it (+ some more older tabs to the right)). You go to the original page and open another link as a tab. This new tab will open 4 positions from the original tab, after the two opened before and one other tab that was already there opened (to the right from your original tab when you started).
Basically it seems that the mechanism that places newly opened tabs spawned from some tab isn't aware some tabs have been closed and instead works with just some number that doesn't update properly.
Edit: I forgot to mention that I see this issue in Epiphany stable v3.36.2, installed from flatpak on elementary OS.