Fix tab open order after tab close

Reset internal last openend embed on tab close to ensure that new append tab position
is recalculated.

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/1240